Add panthor v3 build and push history pages

--- a/templates/_partial-job/build-table.twig
+++ b/templates/_partial-job/build-table.twig
@@ -37,8 +37,8 @@
             {% set canPushSoon = false %}
             {% set canPushNow = false %}
 
-            {% if isPushable %}
-                {% if canUserPush(getCurrentUser(), build.application, build.environment) %}
+            {% if is_pushable %}
+                {% if canUserPush(current_user, build.application, build.environment) %}
                     {% if build.status in ['Waiting', 'Building'] %}
                         {% set canPushSoon = true %}
                     {% elseif build.status in ['Success'] %}
