--- a/templates/application/application.add.twig
+++ b/templates/application/application.add.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'base.twig' %}
 {% import "_partial-form/macros.twig" as form_macros %}
 
 {% set page_title = 'Add Application' %}
@@ -63,7 +63,7 @@
 
             <ul class="button-list">
                 <li><input class="btn btn--action" type="submit" value="Add Application"></li>
-                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ urlFor('applications') }}">Cancel</a></li>
+                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ uriFor('applications') }}">Cancel</a></li>
             </ul>
         </div>
     </form>
