--- a/templates/_partial-job/build-box.twig
+++ b/templates/_partial-job/build-box.twig
@@ -13,7 +13,7 @@
             <article class="card--baby mbn card--{{ build.environment.name }}">
                 <header class="card__header split">
                     <span class="split__title">
-                        <a href="{{ uriFor('application.status', {application: build.application.id}) }}">
+                        <a href="{{ uriFor('application.dashboard', {application: build.application.id}) }}">
                             {{ build.application.name }}
                         </a>
                     </span>
