--- a/templates/group/group.twig
+++ b/templates/group/group.twig
@@ -28,7 +28,7 @@
             <tbody>
             {% for application in applications %}
                 <tr>
-                    <td><a href="{{ urlFor('application.status', {'application': application.id}) }}">{{ application.name }}</a></td>
+                    <td><a href="{{ urlFor('application.dashboard', {'application': application.id}) }}">{{ application.name }}</a></td>
                     <td>{{ macros.gitsource(application) }}</td>
                     <td class="tr">
                         <a href="{{ urlFor('application', {'application': application.id}) }}">Details</a>
