--- a/templates/application/application.edit.twig
+++ b/templates/application/application.edit.twig
@@ -56,7 +56,7 @@
 
             <ul class="button-list">
                 <li><input class="btn btn--action" type="submit" value="Save Changes"></li>
-                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ uriFor('application', {application: application.id}) }}">Cancel</a></li>
+                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ uriFor('application', {'application': application.id}) }}">Cancel</a></li>
             </ul>
         </div>
 
