--- a/templates/application/dashboard.twig
+++ b/templates/application/dashboard.twig
@@ -72,7 +72,7 @@
                 {% for environment in environments %}
                     {% set btnSelected = environment.id == selected_environment.id ? ' btn--selected' : ' btn--not-selected' %}
                     <li class="button-list__selector">
-                        <a class="btn{{ btnSelected }}" href="{{ uriFor('application.dashboard', {application: application.id}, {environment: environment.id}) }}">{{ environment.name }}</a>
+                        <a class="btn{{ btnSelected }}" href="{{ uriFor('application.dashboard', {'application': application.id}, {'environment': environment.id}) }}">{{ environment.name }}</a>
                     </li>
                 {% endfor %}
             </ul>
