--- a/templates/environment/environment.add.twig
+++ b/templates/environment/environment.add.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'base.twig' %}
 {% import "_partial-form/macros.twig" as form_macros %}
 
 {% set page_title = 'Add Environment' %}
@@ -19,7 +19,7 @@
 
             <ul class="button-list">
                 <li><input class="btn btn--action" type="submit" value="Add Environment"></li>
-                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ urlFor('environments') }}">Cancel</a></li>
+                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ uriFor('environments') }}">Cancel</a></li>
             </ul>
 
         </form>
