--- a/templates/environment/environment.edit.twig
+++ b/templates/environment/environment.edit.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'base.twig' %}
 {% import "_partial-form/macros.twig" as form_macros %}
 
 {% set page_title = 'Edit Environment : ' ~ env.name %}
@@ -19,7 +19,7 @@
 
             <ul class="button-list">
                 <li><input class="btn btn--action" type="submit" value="Save Changes"></li>
-                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ urlFor('environment', {id: env.id}) }}">Cancel</a></li>
+                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ uriFor('environment', {'environment': env.id}) }}">Cancel</a></li>
             </ul>
 
         </form>
