--- a/templates/environment/environments.twig
+++ b/templates/environment/environments.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'base.twig' %}
 {% import "_partial/macros.twig" as macros %}
 
 {% set page_title = "Environments" %}
@@ -25,7 +25,7 @@
                             {% endif %}
                         </td>
                         <td class="tr">
-                            <a href="{{ urlFor('environment', {'id': environment.id}) }}">View</a>
+                            <a href="{{ uriFor('environment', {'environment': environment.id}) }}">View</a>
                         </td>
                     </tr>
                 {% endfor %}
@@ -36,10 +36,10 @@
     {% endif %}
 
     <ul class="button-list button-list--half">
-        <li><a class="btn" href="{{ urlFor('applications') }}">Applications</a></li>
+        <li><a class="btn" href="{{ uriFor('applications') }}">Applications</a></li>
 
-        {% if isUserSuper(getCurrentUser()) %}
-            <li><a class="btn btn--action" href="{{ urlFor('environment.add') }}">Add Environment</a></li>
+        {% if isUserSuper(current_user) %}
+            <li><a class="btn btn--action" href="{{ uriFor('environment.add') }}">Add Environment</a></li>
         {% endif %}
     </ul>
 
